--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@font-face {
+  font-family: "NanumSquare";
+  src: url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css')
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 
 :root {
   --background: #ffffff;
